[package]
name = "badfs-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mimalloc = ["mimalloc-rust"]

[dependencies]
badfs-common = { path = "../badfs-common" }
futures = "0.3"
ibverbs = {path = "/root/tmp/rust-librpma"}
libc = "0.2.101"
log = "*"
env_logger = "*"
once_cell = "1.8.0"
ouroboros = "0.13.0"
serde = "1.0"
tarpc = { version = "0.26", features = ["full"] }
tokio = { version = "1.0", features = ["macros"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
mimalloc-rust = {version = "0.1", optional = true}
[dev-dependencies]
libc = "0.2.101"