[package]
edition = "2018"
name = "badfs-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.0.1"
dashmap = "4.0.2"
env_logger = "0.9.0"
futures = "0.3"
ibverbs = {path = "/root/tmp/rust-librpma"}
libc = "0.2.98"
log = "0.4.14"
serde = "1.0"
serde_bytes = "0.11.5"
sharded-slab = "0.1.1"
tarpc = {version = "0.26", features = ["full"]}
thiserror = "1.0.26"
tokio = "1.12.0"
tokio-util = "0.6.8"
tokio-io = "0.1.13"
zerocopy = "0.6.0"
CorundumAllocator = {path = "/root/CorundumAllocator"}

[dev-dependencies]
once_cell = "1.8.0"
