[package]
name = "badfs-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
badfs-client = { path = "../badfs-client" }
badfs-common = { path = "../badfs-common" }
badfs-server = { path = "../badfs-server" }
arbitrary = { version = "1", features = ["derive"] }
futures = "0.3"
once_cell = "1.8.0"
tokio = { version = "1.0", features = ["full"] }