[package]
name = "badfs-intercept"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
mimalloc = ["mimalloc-rust"]

[dependencies]
badfs-common = { path = "../badfs-common" }
badfs-client = { path = "../badfs-client" }
ctor = "0.1.20"
log = "0.4"
env_logger = { version = "0.9" }
libc = "0.2.99"
once_cell = "1.8.0"
tokio = { version = "1.0", features = ["full"] }
mimalloc-rust = {version = "0.1", optional = true}