[package]
name = "badfs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[features]
mimalloc = ["mimalloc-rust"]

[dependencies]
badfs-common = { "path" = "../badfs-common" }
ibverbs = {path = "/root/tmp/rust-ibverbs"}
futures = "0.3"
once_cell = "1.8.0"
ouroboros = "0.13.0"
serde = "1.0"
tarpc = { version = "0.26", features = ["full"] }
tokio = { version = "1.0", features = ["macros"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
env_logger = "0.9.0"
log = "0.4.14"
mimalloc-rust = {version = "0.1", optional = true}

[[bin]]
name="badfs-server"
path="src/main.rs"