[package]
name = "datablock_derive"
version = "0.1.0"
authors = ["Kaiyuan Zhang <kaiyuanz@cs.washington.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.34"
quote = "*"
proc-macro2 = "1.0.10"
